syntax = "proto3";

package openstatus.maintenance.v1;

option go_package = "github.com/openstatushq/openstatus/packages/proto/openstatus/maintenance/v1;maintenancev1";

// MaintenanceSummary represents metadata for a maintenance window (used in list responses).
message MaintenanceSummary {
  // Unique identifier for the maintenance.
  string id = 1;

  // Title of the maintenance.
  string title = 2;

  // Message describing the maintenance.
  string message = 3;

  // Start time of the maintenance window (RFC 3339 format).
  string from = 4;

  // End time of the maintenance window (RFC 3339 format).
  string to = 5;

  // ID of the page this maintenance is associated with.
  string page_id = 6;

  // IDs of affected page components.
  repeated string page_component_ids = 7;

  // Timestamp when the maintenance was created (RFC 3339 format).
  string created_at = 8;

  // Timestamp when the maintenance was last updated (RFC 3339 format).
  string updated_at = 9;
}

// Maintenance represents a maintenance window with full details.
message Maintenance {
  // Unique identifier for the maintenance.
  string id = 1;

  // Title of the maintenance.
  string title = 2;

  // Message describing the maintenance.
  string message = 3;

  // Start time of the maintenance window (RFC 3339 format).
  string from = 4;

  // End time of the maintenance window (RFC 3339 format).
  string to = 5;

  // ID of the page this maintenance is associated with.
  string page_id = 6;

  // IDs of affected page components.
  repeated string page_component_ids = 7;

  // Timestamp when the maintenance was created (RFC 3339 format).
  string created_at = 8;

  // Timestamp when the maintenance was last updated (RFC 3339 format).
  string updated_at = 9;
}
